--- a/.gitignore
+++ b/.gitignore
@@ -80,10 +80,10 @@ target/
 # IPython
 profile_default/
 ipython_config.py
-
+.data*/
 # pyenv
 .python-version
-
+model.py
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
