--- a/app/database/alembic.ini
+++ b/app/database/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = migrate_db
+script_location = migrate
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
